--- a/.env
+++ b/.env
@@ -1,7 +1,6 @@
 PORT=3000
 COUCOU=AA
 PGHOST='localhost'
-PGUSER=USER
-PGDATABASE=DATABASE
-PGPASSWORD=null
+PGUSER=books
+PGDATABASE=books
 PGPORT=5432
