--- a/package.json
+++ b/package.json
@@ -4,6 +4,7 @@
   "main": "index.js",
   "license": "MIT",
   "dependencies": {
+    "@frenchpastries/assemble": "^0.2.1",
     "@frenchpastries/millefeuille": "^0.1.11",
     "@wolfox/caravel": "^0.1.2",
     "dotenv": "^8.2.0",
